force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/Plant_Volume__c.object-meta.xml
<CustomObject>
    <label>Plant Volume</label>
    <nameField>
        <displayFormat>PV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Volumes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>