force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/fields/Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year__c</fullName>
    <label>Calendar Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>