force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/fields/Country_of_Vehicle_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Vehicle_Assembly__c</fullName>
    <label>Country of Vehicle Assembly</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>KOREA_REPUBLIC_OF</fullName>
                <label>KOREA, REPUBLIC OF</label>
            </value>
            <value>
                <fullName>MEXICO</fullName>
            </value>
            <value>
                <fullName>UNITED_STATES</fullName>
                <label>UNITED STATES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>