force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>