force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/fields/Plant_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Program_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Program Code</label>
    <referenceTo>Program_Master__c</referenceTo>
    <relationshipLabel>Plant Volumes</relationshipLabel>
    <relationshipName>Plant_Volumes</relationshipName>
    <type>Lookup</type>
</CustomField>