force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <label>Program Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8sp</fullName>
            </value>
            <value>
                <fullName>AB1V</fullName>
            </value>
            <value>
                <fullName>BET</fullName>
            </value>
            <value>
                <fullName>BET/BEV</fullName>
            </value>
            <value>
                <fullName>BET DU</fullName>
            </value>
            <value>
                <fullName>BEV</fullName>
            </value>
            <value>
                <fullName>BEV+</fullName>
            </value>
            <value>
                <fullName>BEV DU</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Castings</fullName>
            </value>
            <value>
                <fullName>Components</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>CVT</fullName>
            </value>
            <value>
                <fullName>DCT</fullName>
            </value>
            <value>
                <fullName>DMAX Diesel</fullName>
            </value>
            <value>
                <fullName>eLCV</fullName>
            </value>
            <value>
                <fullName>Enclosures</fullName>
            </value>
            <value>
                <fullName>Full Size Truck/SUV</fullName>
            </value>
            <value>
                <fullName>Gen2</fullName>
            </value>
            <value>
                <fullName>Gen 6</fullName>
            </value>
            <value>
                <fullName>Gen V</fullName>
            </value>
            <value>
                <fullName>GenV Comp Assist</fullName>
            </value>
            <value>
                <fullName>GF6</fullName>
            </value>
            <value>
                <fullName>GF9</fullName>
            </value>
            <value>
                <fullName>GRx</fullName>
            </value>
            <value>
                <fullName>HFV6</fullName>
            </value>
            <value>
                <fullName>L234/S233</fullName>
            </value>
            <value>
                <fullName>LT6</fullName>
            </value>
            <value>
                <fullName>Mid Size SUV</fullName>
            </value>
            <value>
                <fullName>Mid Size Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>