force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/fields/RPO__c.field-meta.xml
<CustomField>
    <fullName>RPO__c</fullName>
    <label>RPO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>