force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/fields/Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand__c</fullName>
    <label>Vehicle Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>MONTANA</fullName>
            </value>
            <value>
                <fullName>TRACKER</fullName>
            </value>
            <value>
                <fullName>BRIGHTDROP_400</fullName>
                <label>BRIGHTDROP 400</label>
            </value>
            <value>
                <fullName>BRIGHTDROP_600</fullName>
                <label>BRIGHTDROP 600</label>
            </value>
            <value>
                <fullName>SILVERADO</fullName>
            </value>
            <value>
                <fullName>SILVERADO_HD</fullName>
                <label>SILVERADO HD</label>
            </value>
            <value>
                <fullName>ENVISION</fullName>
            </value>
            <value>
                <fullName>AVEO</fullName>
            </value>
            <value>
                <fullName>CAPTIVA</fullName>
            </value>
            <value>
                <fullName>GROOVE</fullName>
            </value>
            <value>
                <fullName>N400_MAX</fullName>
                <label>N400 MAX</label>
            </value>
            <value>
                <fullName>ONIX</fullName>
            </value>
            <value>
                <fullName>PICKUP_D</fullName>
                <label>PICKUP-D</label>
            </value>
            <value>
                <fullName>SV70</fullName>
            </value>
            <value>
                <fullName>E260S</fullName>
                <label>E260S+</label>
            </value>
            <value>
                <fullName>EV70</fullName>
            </value>
            <value>
                <fullName>F510S</fullName>
            </value>
            <value>
                <fullName>LCF_DSL_JP</fullName>
                <label>LCF DSL-JP</label>
            </value>
            <value>
                <fullName>ENCORE_GX</fullName>
                <label>ENCORE GX</label>
            </value>
            <value>
                <fullName>ENVISTA</fullName>
            </value>
            <value>
                <fullName>TRAILBLAZER</fullName>
            </value>
            <value>
                <fullName>TRAX</fullName>
            </value>
            <value>
                <fullName>OPTIQ</fullName>
            </value>
            <value>
                <fullName>BLAZER</fullName>
            </value>
            <value>
                <fullName>BLAZER_EV</fullName>
                <label>BLAZER EV</label>
            </value>
            <value>
                <fullName>EQUINOX</fullName>
            </value>
            <value>
                <fullName>EQUINOX_EV</fullName>
                <label>EQUINOX EV</label>
            </value>
            <value>
                <fullName>SIERRA</fullName>
            </value>
            <value>
                <fullName>TERRAIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>