force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Plant__c</columns>
    <columns>Calendar_Year__c</columns>
    <columns>Month__c</columns>
    <columns>Vehicle_Brand__c</columns>
    <columns>Volume__c</columns>
    <columns>Data_Point_Value__c</columns>
    <columns>Country_of_Vehicle_Assembly__c</columns>
    <columns>Sector__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Brand__c</field>
        <operation>equals</operation>
        <value>LYRIQ</value>
    </filters>
    <filters>
        <field>Plant__c</field>
        <operation>equals</operation>
        <value>Spring Hill Assembly</value>
    </filters>
    <label>All</label>
</ListView>