force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Volume__c/listViews/GPS.listView-meta.xml
<ListView>
    <fullName>GPS</fullName>
    <columns>Plant__c</columns>
    <columns>Calendar_Year__c</columns>
    <columns>Month__c</columns>
    <columns>Volume__c</columns>
    <columns>Data_Point_Value__c</columns>
    <columns>Sector__c</columns>
    <columns>Functional_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sector__c</field>
        <operation>equals</operation>
        <value>GPS</value>
    </filters>
    <label>GPS</label>
</ListView>